--- a/desafios/d012/estilo/estilo.css
+++ b/desafios/d012/estilo/estilo.css
@@ -10,6 +10,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
 
 
+
+
 header{
     background-color: black;
     color: white;
@@ -20,7 +22,7 @@ header{
 
 header h1{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 4em;
+    font-size: clamp(4em, 1em + 6vw, 10em);
     padding-top: 50px;
     
     
@@ -69,10 +71,48 @@ section#flor > div{
     width: 420px;
     color: white;
     background-color: rgba(0, 0, 0, 0.267);
-    padding-top: ;
+    position: relative;
+
+    top: 50px;
+    left: 50px;
     
 }
 
-#sec1{
+section#carta{
+    background: black url('../imagens/background002.jpg') right bottom no-repeat fixed;
+    background-size: cover;
+    height: 600px;
+}
+
+section#carta > div{
+    width: 420px;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.267);
+    position: relative;
+
+    top: 50px;
+    left: 50px;
+}
+
+.separa{
     padding-top: 100px;
+}
+
+footer{
+    padding: 10px;
+    background-color: black;
+    color: white;
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1.5em;
+}
+
+footer a{
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+footer a:hover{
+    text-decoration: underline;
 }
